# cpp-game

./: CMakeLists.txt  README.md
src/: board.cpp  board.h  game.cpp  game.h  game_manager.cpp  game_manager.h  main.cpp
test/: board_test.cpp  game_manager_test.cpp  game_test.cpp
